HTML structure changed

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             font-style: italic;
         }
 
-        div#second-div p:last-child:hover {
+        div#first-div ~ p:last-of-type:hover {
             font-style: italic;
         }
     </style>
@@ -63,9 +63,10 @@
             <p>Paragraph 6</p>
             <p>Paragraph 7</p>
             <p>Paragraph 8</p>
-            <p>Paragraph 9</p>
-            <p>Paragraph 10</p>
         </div>
-    </div>
+    </div>            
+    <p>Paragraph 9</p>
+    <p>Paragraph 10</p>
+
 </body>
 </html>
